new proj/src/objects/GE_OG_ERP_Detail__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_ERP_Ship_To_SAP_TC__c</fullName>
        <label>Ship To - ERP Customer# T&amp;Cs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Ship_To_SAP__c</fullName>
        <label>Ship To - ERP Customer#</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Shipping_Conditions__c</fullName>
        <inlineHelpText>If majority of shipments will be from US, use either 95, 96 or 97.</inlineHelpText>
        <label>Shipping Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Airfreight - 01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courier Overnight - 02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courier Same Day - 03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courier Standard Service - 04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotshot - 05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seafreight - 06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck - 07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Carry - 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Collection - 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship from Lafayette Manufacturing - 95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship from Lafayette Sales - 96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship from Conroe - 97</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Subscribed_Legacy_Systems__c</fullName>
        <description>Store additional legacy system names in a form of string.</description>
        <inlineHelpText>Additional Legacy System added during KYC Process.</inlineHelpText>
        <label>Subscribed/Legacy Systems</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_System_Customer__c</fullName>
        <label>ERP System Customer# is located</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tax_ID_Format__c</fullName>
        <label>Tax ID Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tier_1_P_L__c</fullName>
        <formula>TEXT(GE_OG_ERP_Account__r.GE_OG_Buss_Tier1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tier_2_P_L__c</fullName>
        <formula>TEXT(GE_OG_ERP_Account__r.GE_OG_Buss_Tier2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 2 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tier_3_P_L__c</fullName>
        <formula>TEXT(GE_OG_ERP_Account__r.GE_OG_Buss_Tier3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 3 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Inbound_Time__c</fullName>
        <label>Finance Inbound Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Outbound_Time__c</fullName>
        <label>Finance Outbound Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Cycle_Time__c</fullName>
        <label>Finance Cycle Time(in hours)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KYC</label>
        <referenceTo>GE_PRM_KYC_Termination_Checklist__c</referenceTo>
        <relationshipName>GE_OG_ERP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Loc_Nuclr_Facility__c</fullName>
        <label>Is this Location a Nuclear Facility</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Payt_Terms_Requested__c</fullName>
        <label>Payment Terms Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Cash against Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payable immediately Due net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 30 days Due net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 45 days Due net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 60 days Due net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 90 days Due net</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Pref_Mthd_Pay__c</fullName>
        <label>Preferred Method Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Credit_Limit__c</fullName>
        <inlineHelpText>This is the credit limit the customer is requesting. The amount will be reviewed and determined by the Credit Team</inlineHelpText>
        <label>Requested Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Payment_Terms__c</fullName>
        <label>Requested Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Advance Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash against Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payable immediately Due net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 30 days Due net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 45 days Due net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 60 days Due net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 90 days Due net</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ERP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERP-{0000000}</displayFormat>
        <label>ERP Details #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Details</pluralLabel>
    <recordTypes>
        <fullName>GE_OG_ERP_Downhole_Technology_Type</fullName>
        <active>true</active>
        <label>ERP Downhole Technology</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_ERP_Lufkin</fullName>
        <active>true</active>
        <description>Created to use for Lufkin and as per R-15273</description>
        <label>ERP Lufkin</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_ERP_Oracle_Type</fullName>
        <active>true</active>
        <label>ERP Oracle</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_ERP_SAP_Type</fullName>
        <active>true</active>
        <label>ERP SAP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>